Basic UI Wireframe complete

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <!-- META INFORMATION -->
     <title>Visualisation Tool</title>
-    <meta name="Description" content="A tag based Data Visualisation Tool for the Digital Humanities that incorcoporates Text Analysis to discover insight surrounding entities within historical documents. Designed for the University of Chester in 2016-17 by Joshua Evans." />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
+    <meta name="Description" content="A tag based Data Visualisation Tool for the Digital Humanities that incorcoporates Text Analysis to discover insight surrounding entities within historical documents. Designed for the University of Chester in 2016-17 by Joshua Evans."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
 
     <!-- STYLING -->
@@ -25,7 +26,7 @@
     <!-- HEADER -->
     <header>
         <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container">
+            <div class="container-fluid">
 
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -43,21 +44,22 @@
         </nav>
     </header>
 
+    <section>
+        <div class="container-fluid fill custom-main-interface">
+            <div class="row fill">
+                <div class="col-md-5 fill custom-overview-pane">
+                    <div class="overview-pane">
 
-    <div class="container fill">
-      <div class="row fill">
-        <div class="col-md-5 fill">.col-md-5
-          <div class="overview-pane">
+                    </div>
+                </div>
+                <div class="col-md-7 fill custom-visualisation-pane">
+                    <div class="visualisation-pane">
 
-          </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-md-7 fill">.col-md-7
-          <div class="visualisation-pane">
-
-          </div>
-        </div>
-      </div>
-    </div>
+    </section>
 
 
     <!-- <form class="navbar-form navbar-left">
