--- a/index.html
+++ b/index.html
@@ -29,15 +29,22 @@
             <div class="container-fluid">
 
                 <!-- Brand and toggle get grouped for better mobile display -->
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">University of Chester</a>
                 </div>
+                <div class="collapse navbar-collapse" id="myNavbar"/>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Load</a></li>
                     <li><a href="#">Upload</a></li>
                     <li><a href="#">Tags</a></li>
                     <li><a href="#">Export</a></li>
                 </ul>
+                </div>
             </div>
             <!-- /.navbar-collapse -->
             </div>
