--- a/index.html
+++ b/index.html
@@ -93,6 +93,20 @@
           </div>
           <div class="modal-body">
 
+          <div class="form-group upload-form">
+            <label class="btn btn-primary" for="file-selector">
+              <input id="file-selector" type="file" style="display:none;" onchange="$('#upload-file-info').html($(this).val());">
+              Select file...
+          </label>
+          <span class='label label-info' id="upload-file-info"></span>
+          <div class="upload-form-meta">              
+          <h5>Optional Meta Data</h5>
+          <input type="text" class="form-control" placeholder="Author..." aria-describedby="author-text" id="file-meta-author">
+          <input type="text" class="form-control" placeholder="Title..." aria-describedby="title-text" id="file-meta-title">
+          <input type="text" class="form-control" placeholder="Genre..." aria-describedby="title-text" id="file-meta-genre">
+          </div>
+        </div>
+
 
           </div>
           <div class="modal-footer">
