Adjusted Tag Management Values design - more inline with document designs

--- a/index.html
+++ b/index.html
@@ -151,21 +151,32 @@
                                     <div class="tags-form">
                                         <h5>Modify</h5>
                                         <input type="text" class="form-control" placeholder="Element..." id="tag-element">
+
                                         <div class="input-group tag-input-groups">
-                                          <input type="text" class="form-control" placeholder="Attribute..." id="tag-attribute">
-                                          <span class="input-group-btn">
-                                            <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-remove" id="remove-attribute"></span></button>
-                                          </span>
+                                            <input type="text" class="form-control" placeholder="Attribute..." id="tag-attribute">
+                                            <span class="input-group-btn">
+                                        <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-remove" id="remove-attribute"></span></button>
+                                                    </span>
                                         </div>
-                                        <div class="add-field">
-                                            <span class="glyphicon glyphicon-plus" id="add-value"></span>
+                                        <div class="container-fluid tag-values">
+                                            <div class="row-fluid">
+                                                <div class="col-md-2">
+                                                    <div class="add-field">
+                                                        <span class="glyphicon glyphicon-plus" id="add-value"></span>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-10">
+                                                  <div class="input-group tag-input-groups">
+                                                      <input type="text" class="form-control" placeholder="Value..." id="tag-value">
+                                                      <span class="input-group-btn">
+                                                      <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-remove" id="remove-value"></span></button>
+                                                      </span>
+                                                  </div>
+                                                </div>
+                                            </div>
                                         </div>
-                                        <div class="input-group tag-input-groups">
-                                          <input type="text" class="form-control" placeholder="Value..." id="tag-value">
-                                          <span class="input-group-btn">
-                                            <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-remove" id="remove-value"></span></button>
-                                          </span>
-                                        </div>
+
+
                                         <div class="add-field">
                                             <span class="glyphicon glyphicon-plus" id="add-value"></span>
                                         </div>
