--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <h5>Optional Meta Data</h5>
                             <input type="text" class="form-control" placeholder="Author..." aria-describedby="author-text" id="file-meta-author">
                             <input type="text" class="form-control" placeholder="Title..." aria-describedby="title-text" id="file-meta-title">
-                            <input type="text" class="form-control" placeholder="Genre..." aria-describedby="title-text" id="file-meta-genre">
+                            <input type="text" class="form-control" placeholder="Genre..." aria-describedby="genre-text" id="file-meta-genre">
                         </div>
                     </div>
 
@@ -194,7 +194,7 @@
 
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default pull-left">New</button>
-                        <button type="button" class="btn btn-danger">Delete</button>
+                        <button type="button" class="btn btn-danger outline">Delete</button>
                         <button type="button" class="btn btn-default">Cancel</button>
                         <button type="button" class="btn btn-default">Save</button>
                     </div>
@@ -231,23 +231,79 @@
     <!-- ASSIGN MODAL -->
 
     <div class="modal fade" id="assign-tag-modal" tabindex="-1" role="dialog" aria-labelledby="assign-tag-modal-label">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="export-modal-label">Export File</h4>
-                </div>
-                <div class="modal-body">
+      <div class="modal-dialog" role="document">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="upload-modal-label">Tag Assignment</h4>
+              </div>
+              <div class="modal-body">
 
-                    <h5>Select a file to download.</h5>
-                    <div class="list-group export-links">
-                        <a href="#" class="list-group-item">Document metadata<span class="glyphicon glyphicon-circle-arrow-down"></span></a>
-                        <a href="#" class="list-group-item">Visualisation extract<span class="glyphicon glyphicon-circle-arrow-down"></span></a>
-                        <a href="#" class="list-group-item">System schema<span class="glyphicon glyphicon-circle-arrow-down"></span></a>
-                    </div>
-                </div>
-            </div>
-        </div>
+                  <div class="row schema-tags">
+                      <div class="col-md-4 available-tags">
+                          <h5>Available Tags</h5>
+                          <div class="list-group">
+                              <button type="button" class="list-group-item">Tag 1</button>
+                              <button type="button" class="list-group-item">Tag 2</button>
+                              <button type="button" class="list-group-item">Tag 3</button>
+                              <button type="button" class="list-group-item">Tag 4</button>
+                              <button type="button" class="list-group-item">Tag 5</button>
+                          </div>
+
+                      </div>
+
+                      <div class="col-md-8">
+
+                          <form>
+                              <div class="form-group">
+                                  <div class="tags-form">
+                                      <h5>Assign Tag</h5>
+                                      <div class="input-group available-tags-input-groups">
+                                        <div class="dropdown assign-tag-dropdown">
+                                            <button class="btn btn-default dropdown-toggle" type="button" id="attribute-selection-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                  Attribute...
+                                  <span class="caret"></span>
+                                </button>
+                                            <ul class="dropdown-menu" aria-labelledby="attribute-selection-dropdown">
+                                                <li><a href="#">Attribute 1</a></li>
+                                                <li><a href="#">Attribute 2</a></li>
+                                                <li><a href="#">Attribute 3</a></li>
+                                            </ul>
+                                        </div>
+                                      </div>
+                                      <div class="input-group available-tags-input-groups">
+                                        <div class="dropdown assign-tag-dropdown">
+                                            <button class="btn btn-default dropdown-toggle" type="button" id="value-selection-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                  Value...
+                                  <span class="caret"></span>
+                                </button>
+                                            <ul class="dropdown-menu" aria-labelledby="value-selection-dropdown">
+                                                <li><a href="#">Value 1</a></li>
+                                                <li><a href="#">Value 2</a></li>
+                                                <li><a href="#">Value 3</a></li>
+                                            </ul>
+                                        </div>
+                                      </div>
+                                        <input type="text" class="form-control" placeholder="New value..." aria-describedby="author-text" id="new-value">
+                                  </div>
+
+                              </div>
+                          </form>
+
+                      </div>
+
+                  </div>
+
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-default">Assign</button>
+                      <button type="button" class="btn btn-default">Assign All</button>
+                  </div>
+
+
+              </div>
+
+          </div>
+      </div>
     </div>
 
     <!-- MAIN INTERFACE -->
