schema added - no restrictions

--- a/modals.html
+++ b/modals.html
@@ -181,6 +181,10 @@
             </div>
             <div class="modal-body">
 
+              <div class="input-group">
+                <span class="input-group-addon">Selection</span>
+                <input type="text" class="form-control" id="selected-word" readonly name="selection">
+              </div>
                 <div class="row schema-tags">
                     <div class="col-md-4 available-tags">
                         <h5>Available Tags</h5>
