--- a/old/modals.html
+++ b/old/modals.html
@@ -189,6 +189,7 @@
                     <div class="col-md-4 available-tags">
                         <h5>Available Tags</h5>
                         <div class="list-group">
+                          
                             <button type="button" class="list-group-item">Tag 1</button>
                             <button type="button" class="list-group-item">Tag 2</button>
                             <button type="button" class="list-group-item">Tag 3</button>
@@ -293,7 +294,10 @@
       this.reset();
       }
     });
-    $("#assign-tag-modal").ajaxSubmit({url: 'ServerFiles/xml.php', type: 'get'})
+
+
+
+    //$("#assign-tag-modal").ajaxSubmit({url: 'ServerFiles/xml.php', type: 'get'})
 </script>
 
 
