--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 
     <!-- STYLING -->
     <link href="Libs/bootstrap/css/bootstrap.css" rel="stylesheet" />
-    <link href="Libs/jquery-ui-1.12.1/jquery-ui.min.css" rel="stylesheet"/>
-    <link href="Libs/jquery-ui-1.12.1/jquery-ui.structure.min.css" rel="stylesheet"/>
-    <link href="Libs/jquery-ui-1.12.1/jquery-ui.theme.min.css" rel="stylesheet"/>
-    <link href="Libs/jquery-contextMenu/dist/jquery.contextMenu.min.css" rel="stylesheet"/>
-    <!-- <link href="Libs/jquery.highlighttext/jquery.highlighttextarea.min.css" rel="stylesheet"/> -->
+    <link href="Libs/jquery-ui-1.12.1/jquery-ui.min.css" rel="stylesheet" />
+    <link href="Libs/jquery-ui-1.12.1/jquery-ui.structure.min.css" rel="stylesheet" />
+    <link href="Libs/jquery-ui-1.12.1/jquery-ui.theme.min.css" rel="stylesheet" />
+    <link href="Libs/jquery-contextMenu/dist/jquery.contextMenu.min.css" rel="stylesheet" />
+    <link href="Libs/tooltipster/dist/css/tooltipster.bundle.min.css" rel="stylesheet" />
+    <link href="Libs/tooltipster/dist/css/plugins/tooltipster/sideTip/themes/tooltipster-sideTip-light.min.css" rel="stylesheet" />
     <link href="CSS/custom.css" rel="stylesheet" title="custom" />
 
     <!-- SCRIPTS -->
@@ -27,9 +28,10 @@
     <script src="Libs/jquery-contextMenu/dist/jquery.ui.position.min.js"></script>
     <script src="Libs/wordfreq/src/wordfreq.js"></script>
     <script src="Libs/wordcloud2/src/wordcloud2.js"></script>
-    <!-- <script src="Libs/jquery.highlighttextarea/jquery.highlighttextarea.min.js"></script> -->
+    <script src="Libs/mark.js/dist/jquery.mark.min.js"></script>
     <script src="Libs/jquery.selection/src/jquery.selection.js"></script>
     <script src="Libs/jquery.form/src/jquery.form.js"></script>
+    <script src="Libs/tooltipster/dist/js/tooltipster.bundle.min.js"></script>
     <script src="JS/custom.js"></script>
 </head>
 
@@ -64,7 +66,6 @@
 
 
     <!-- MODALS -->
-    <!-- <div class="modals"></div> -->
     <!-- LOAD MODAL -->
     <div class="modal fade" id="load-modal" tabindex="-1" role="dialog" aria-labelledby="load-modal-label">
         <div class="modal-dialog modal-sm" role="document">
@@ -80,16 +81,21 @@
               Select document...
               <span class="caret"></span>
             </button>
-                        <ul class="dropdown-menu" aria-labelledby="load-dropdown">
-                            <li><a href="#">Doc 1</a></li>
-                            <li><a href="#">Doc 2</a></li>
-                            <li><a href="#">Doc 3</a></li>
+                        <ul class="dropdown-menu" aria-labelledby="load-dropdown" id="available-files-list">
                         </ul>
                     </div>
+                    <!-- <div class="input-group selected-file-style">
+                      <input type="text" class="form-control" id="selected-file" readonly name="selected-file" placeholder="Document...">
+                    </div> -->
+
                 </div>
                 <div class="modal-footer">
+                    <span class="selected-file-style" id="selected-file"></span>
+                    <!-- <input type="submit" class="btn btn-default" id="load-file" name="submit" value="Load" /> -->
                     <button type="button" class="btn btn-default" id="file-load">Load</button>
                 </div>
+
+                <!-- </form> -->
             </div>
         </div>
     </div>
@@ -103,11 +109,9 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title" id="upload-modal-label">Upload Document</h4>
                 </div>
-
-                <!-- <form method="post" enctype="multipart/form-data" id="upload-form"> -->
                 <form method="post" enctype="multipart/form-data" id="upload-form" action="ServerFiles/upload.php">
 
-                <div class="modal-body">
+                    <div class="modal-body">
 
                         <div class="form-group upload-form">
                             <label class="btn btn-primary" for="file-selector">
@@ -122,10 +126,10 @@
                                 <input type="text" class="form-control" placeholder="Genre..." aria-describedby="genre-text" name="file-meta-genre">
                             </div>
                         </div>
-                </div>
-                <div class="modal-footer">
-                    <input type="submit" class="btn btn-default" id="upload-file" name="submit" value="Upload" />
-                </div>
+                    </div>
+                    <div class="modal-footer">
+                        <input type="submit" class="btn btn-default" id="upload-file" name="submit" value="Upload" />
+                    </div>
 
                 </form>
             </div>
@@ -244,96 +248,57 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="upload-modal-label">Tag Assignment</h4>
+                    <h4 class="modal-title" id="tag-modal-label">Tag Assignment</h4>
                 </div>
-                <div class="modal-body">
+                <form method="post" enctype="multipart/form-data" id="assign-tags-form" action="ServerFiles/assign.php">
+                    <div class="modal-body">
 
-                  <div class="input-group">
-                    <span class="input-group-addon">Selection</span>
-                    <input type="text" class="form-control" id="selected-word" readonly name="selection">
-                  </div>
-                    <div class="row schema-tags">
-                        <div class="col-md-4 available-tags">
-                            <h5>Available Tags</h5>
-                            <div class="list-group" id="tag-elements">
-
-                                <!-- <button type="button" class="list-group-item">Tag 1</button>
-                                <button type="button" class="list-group-item">Tag 2</button>
-                                <button type="button" class="list-group-item">Tag 3</button>
-                                <button type="button" class="list-group-item">Tag 4</button>
-                                <button type="button" class="list-group-item">Tag 5</button> -->
-                            </div>
-
+                        <div class="input-group">
+                            <span class="input-group-addon">Selection</span>
+                            <input type="text" class="form-control" id="selected-word" readonly name="selection">
                         </div>
-
-                        <div class="col-md-8">
-
-                            <form>
-                                <div class="form-group">
-                                    <div class="tags-form">
-                                        <h5>Assign Tag</h5>
-                                        <div class="input-group available-tags-input-groups">
-                                            <div class="dropdown assign-tag-dropdown">
-                                                <button class="btn btn-default dropdown-toggle" type="button" id="attribute-selection-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" disabled>
-                                  Attribute...
-                                  <span class="caret"></span>
-                                </button>
-                                                <ul class="dropdown-menu" aria-labelledby="attribute-selection-dropdown" id="tag-attributes">
-                                                    <!-- <li><a href="#">Attribute 1</a></li>
-                                                    <li><a href="#">Attribute 2</a></li>
-                                                    <li><a href="#">Attribute 3</a></li> -->
-                                                </ul>
-                                            </div>
-                                        </div>
-                                        <div class="input-group available-tags-input-groups">
-                                            <div class="dropdown assign-tag-dropdown">
-                                                <button class="btn btn-default dropdown-toggle" type="button" id="value-selection-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                  Value...
-                                  <span class="caret"></span>
-                                </button>
-                                                <ul class="dropdown-menu" aria-labelledby="value-selection-dropdown">
-                                                    <li><a href="#">Value 1</a></li>
-                                                    <li><a href="#">Value 2</a></li>
-                                                    <li><a href="#">Value 3</a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                        <input type="text" class="form-control" placeholder="New value..." aria-describedby="author-text" id="new-value">
-                                    </div>
-
+                        <div class="row schema-tags">
+                            <div class="col-md-4 available-tags">
+                                <h5>Available Tags</h5>
+                                <div class="list-group" id="tag-elements">
                                 </div>
-                            </form>
+                            </div>
+                            <div class="col-md-8">
+                                <form>
+                                    <div class="form-group">
+                                        <div class="tags-form">
+                                            <h5>Assign Tag</h5>
+                                            <div class="input-group available-tags-input-groups">
+                                                <div class="dropdown assign-tag-dropdown">
+                                                    <button class="btn btn-default dropdown-toggle" type="button" id="attribute-selection-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" disabled>
+                                  Select attribute...
+                                  <span class="caret"></span>
+                                </button>
+                                                    <ul class="dropdown-menu" aria-labelledby="attribute-selection-dropdown" id="tag-attributes">
+                                                    </ul>
+                                                </div>
 
+                                                <div class="input-group selected-attr">
+                                                    <span class="input-group-addon">Attribute</span>
+                                                    <input type="text" class="form-control" id="selected-attr" readonly name="attribute">
+                                                </div>
+
+                                            </div>
+
+                                            <div class="input-group selected-attr">
+                                                <span class="input-group-addon selected-val-addon">Value</span>
+                                                <input type="text" class="form-control" id="new-value" placeholder="Enter value..." name="value">
+                                            </div>
+                                        </div>
+                                    </div>
+                            </div>
                         </div>
-
+                        <div class="modal-footer">
+                            <!-- <button type="button" class="btn btn-default">Assign</button> -->
+                            <input type="submit" class="btn btn-default" id="assign-file" name="submit" value="Assign All" />
+                        </div>
+                        </form>
                     </div>
-
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default">Assign</button>
-                        <button type="button" class="btn btn-default">Assign All</button>
-                    </div>
-
-
-                </div>
-
-            </div>
-        </div>
-    </div>
-
-    <!-- UPLOAD COMPLETE MODAL -->
-
-    <div class="modal fade" id="upload-complete-modal" tabindex="-1" role="dialog" aria-labelledby="upload-complete-modal-label">
-        <div class="modal-dialog modal-sm" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <!-- <h4 class="modal-title" id="upload-complete-modal-label">Export File</h4> -->
-                </div>
-                <div class="modal-body">
-
-                    <h2>Upload Successful</h2>
-
-                </div>
             </div>
         </div>
     </div>
@@ -342,9 +307,7 @@
     <section>
         <div class="container-fluid fill custom-main-interface">
 
-          <!-- <span id="message-popup"></span> -->
-          <div id="positive-alert" class="alert alert-success" role="alert"></div>
-          <div id="negative-alert" class="alert alert-danger" role="alert"></div>
+
 
             <div class="row fill">
 
@@ -354,23 +317,16 @@
                     <div class="overview-pane">
 
                         <div class="input-group search-bar">
-                            <input type="text" class="form-control" placeholder="Search...">
+                            <input type="text" class="form-control" placeholder="Search..." id="search-bar">
                             <span class="input-group-btn">
-                          <button class="btn btn-default" type="button">
+                          <button class="btn btn-default" type="button" id="search-bar-button">
                             <span class="glyphicon glyphicon-search"></span>
                             </button>
                             </span>
                         </div>
 
-                        <!-- <div class="overview-content" oncontextmenu="return false;"> -->
                         <div class="overview-content" oncontextmenu="return false;">
-
-                        <?php  //$xmlDoc = new DOMDocument();$xmlDoc->load('/Applications/XAMPP/xamppfiles/htdocs/eCorpi/UserFiles/Files/Chretien 1 Erec.xml');?>
-                        <?PHP  //echo '<textarea class="textarea-content right-click-menu" placeholder="Please load in a document for analysis..." readonly>', strip_tags(file_get_contents('/Applications/XAMPP/xamppfiles/htdocs/eCorpi/UserFiles/Files/Chretien 1 Erec.xml')), '</textarea>'; ?>
-                        <?PHP //echo '<pre>', strip_tags(file_get_contents('/Applications/XAMPP/xamppfiles/htdocs/eCorpi/UserFiles/Files/Chretien 1 Erec.xml')), '</pre>'; ?>
-                        <?php // echo nl2br( htmlspecialchars( file_get_contents('/Applications/XAMPP/xamppfiles/htdocs/eCorpi/UserFiles/Files/Chretien 1 Erec.xml'))); ?>
-                        <?php //include('/Applications/XAMPP/xamppfiles/htdocs/eCorpi/UserFiles/Files/Chretien 1 Erec.txt'); ?>
-
+                            <div class="textarea-content right-click-menu" placeholder="Please load in a document for analysis..." readonly id="document-textarea"></div>
                         </div>
 
                     </div>
@@ -401,6 +357,11 @@
 
                     </div>
                 </div>
+                <div id="positive-alert" class="alert alert-success" role="alert"></div>
+                <div id="negative-alert" class="alert alert-danger" role="alert"></div>
+            </div>
+            <div class="row">
+                <!-- notifications -->
             </div>
         </div>
     </section>
