Removed managed value entering, section, tidied up

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           </label>
                             <span class='label label-info' id="upload-file-info"></span>
                             <div class="upload-form-meta">
-                                <h5>Optional Meta Data</h5>
+                                <h5>Document Meta Data</h5>
                                 <input type="text" class="form-control" placeholder="Author..." aria-describedby="author-text" name="file-meta-author">
                                 <input type="text" class="form-control" placeholder="Title..." aria-describedby="title-text" name="file-meta-title">
                                 <input type="text" class="form-control" placeholder="Genre..." aria-describedby="genre-text" name="file-meta-genre">
@@ -174,24 +174,6 @@
                                         <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-remove" id="remove-attribute"></span></button>
                                             </span>
                                         </div>
-                                        <div class="container-fluid tag-values">
-                                            <div class="row-fluid">
-                                                <div class="col-md-2">
-                                                    <div class="add-field">
-                                                        <span class="glyphicon glyphicon-plus" id="add-value"></span>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-10">
-                                                    <div class="input-group tag-input-groups">
-                                                        <input type="text" class="form-control" placeholder="Value..." id="tag-value">
-                                                        <span class="input-group-btn">
-                                                      <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-remove" id="remove-value"></span></button>
-                                                        </span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-
 
                                         <div class="add-field">
                                             <span class="glyphicon glyphicon-plus" id="add-value"></span>
@@ -338,17 +320,6 @@
 
                 <div class="col-md-7 fill custom-visualisation-pane">
                     <div class="visualisation-pane">
-
-                        <div class="dropdown">
-                            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                              Select visualisation...
-                              <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                <li><a href="#">Word Cloud</a></li>
-                                <li><a href="#">Word Tree</a></li>
-                            </ul>
-                        </div>
 
                         <div class="visualisation-content">
 
