--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <!-- META INFORMATION -->
     <title>Visualisation Tool</title>
-    <meta name="Description" content="A tag based Data Visualisation Tool for the Digital Humanities that incorcoporates Text Analysis to discover insight surrounding entities within historical documents. Designed for the University of Chester in 2016-17 by Joshua Evans."
-    />
+    <meta name="Description" content="A tag based Data Visualisation Tool for the Digital Humanities that incorcoporates Text Analysis to discover insight surrounding entities within historical documents. Designed for the University of Chester in 2016-17 by Joshua Evans."/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
 
     <!-- STYLING -->
     <link href="Libs/bootstrap/css/bootstrap.css" rel="stylesheet" />
@@ -36,7 +33,6 @@
 </head>
 
 <body>
-
     <!-- HEADER -->
     <header>
         <nav class="navbar navbar-default navbar-fixed-top">
@@ -49,7 +45,7 @@
                   <span class="icon-bar"></span>
                 </button>
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">University of Chester</a>
+                    <a class="navbar-brand" href="index.html">University of Chester</a>
                 </div>
                 <div class="collapse navbar-collapse" id="my-navbar" />
                 <ul class="nav navbar-nav navbar-right">
@@ -84,24 +80,16 @@
                         <ul class="dropdown-menu" aria-labelledby="load-dropdown" id="available-files-list">
                         </ul>
                     </div>
-                    <!-- <div class="input-group selected-file-style">
-                      <input type="text" class="form-control" id="selected-file" readonly name="selected-file" placeholder="Document...">
-                    </div> -->
-
                 </div>
                 <div class="modal-footer">
                     <span class="selected-file-style" id="selected-file"></span>
-                    <!-- <input type="submit" class="btn btn-default" id="load-file" name="submit" value="Load" /> -->
                     <button type="button" class="btn btn-default" id="file-load">Load</button>
                 </div>
-
-                <!-- </form> -->
             </div>
         </div>
     </div>
 
     <!-- UPLOAD MODAL -->
-
     <div class="modal fade" id="upload-modal" tabindex="-1" role="dialog" aria-labelledby="upload-modal-label">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -110,9 +98,7 @@
                     <h4 class="modal-title" id="upload-modal-label">Upload Document</h4>
                 </div>
                 <form method="post" enctype="multipart/form-data" id="upload-form" action="ServerFiles/upload.php">
-
                     <div class="modal-body">
-
                         <div class="form-group upload-form">
                             <label class="btn btn-primary" for="file-selector">
               <input name="file-selector" id="file-selector" type="file" style="display:none;" onchange="$('#upload-file-info').html($(this).val());">
@@ -130,14 +116,12 @@
                     <div class="modal-footer">
                         <input type="submit" class="btn btn-default" id="upload-file" name="submit" value="Upload" />
                     </div>
-
                 </form>
             </div>
         </div>
     </div>
 
-    <!-- TAGS MODAL -->
-
+    <!-- TAG MANAGEMENT MODAL -->
     <div class="modal fade" id="tag-modal" tabindex="-1" role="dialog" aria-labelledby="tags-modal-label">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -146,7 +130,6 @@
                     <h4 class="modal-title" id="upload-modal-label">Tag Management</h4>
                 </div>
                 <div class="modal-body">
-
                     <div class="row schema-tags">
                         <div class="col-md-4 available-tags">
                             <h5>Available Tags</h5>
@@ -157,11 +140,9 @@
                                 <button type="button" class="list-group-item">Tag 4</button>
                                 <button type="button" class="list-group-item">Tag 5</button>
                             </div>
-
                         </div>
 
                         <div class="col-md-8">
-
                             <form>
                                 <div class="form-group">
                                     <div class="tags-form">
@@ -179,30 +160,22 @@
                                             <span class="glyphicon glyphicon-plus" id="add-value"></span>
                                         </div>
                                     </div>
-
                                 </div>
                             </form>
-
                         </div>
-
                     </div>
-
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default pull-left">New</button>
                         <button type="button" class="btn btn-danger outline">Delete</button>
                         <button type="button" class="btn btn-default">Cancel</button>
                         <button type="button" class="btn btn-default">Save</button>
                     </div>
-
-
                 </div>
-
             </div>
         </div>
     </div>
 
     <!-- EXPORT MODAL -->
-
     <div class="modal fade" id="export-modal" tabindex="-1" role="dialog" aria-labelledby="export-modal-label">
         <div class="modal-dialog modal-sm" role="document">
             <div class="modal-content">
@@ -224,7 +197,6 @@
     </div>
 
     <!-- ASSIGN MODAL -->
-
     <div class="modal fade" id="assign-tag-modal" tabindex="-1" role="dialog" aria-labelledby="assign-tag-modal-label">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -276,7 +248,6 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <!-- <button type="button" class="btn btn-default">Assign</button> -->
                             <input type="submit" class="btn btn-default" id="assign-file" name="submit" value="Assign All" />
                         </div>
                         </form>
@@ -288,16 +259,11 @@
     <!-- MAIN INTERFACE -->
     <section>
         <div class="container-fluid fill custom-main-interface">
-
-
-
             <div class="row fill">
 
                 <!-- OVERVIEW -->
-
                 <div class="col-md-5 fill custom-overview-pane">
                     <div class="overview-pane">
-
                         <div class="input-group search-bar">
                             <input type="text" class="form-control" placeholder="Search..." id="search-bar">
                             <span class="input-group-btn">
@@ -306,37 +272,27 @@
                             </button>
                             </span>
                         </div>
-
                         <div class="overview-content" oncontextmenu="return false;">
                             <div class="textarea-content right-click-menu" placeholder="Please load in a document for analysis..." readonly id="document-textarea"></div>
                         </div>
-
                     </div>
                 </div>
 
-
-
                 <!-- VISUALISATION -->
-
                 <div class="col-md-7 fill custom-visualisation-pane">
                     <div class="visualisation-pane">
 
-                        <div class="visualisation-content">
-
-
-                        </div>
+                        <div class="visualisation-content"></div>
 
                     </div>
                 </div>
+
+                <!-- notifications -->
                 <div id="positive-alert" class="alert alert-success" role="alert"></div>
                 <div id="negative-alert" class="alert alert-danger" role="alert"></div>
-            </div>
-            <div class="row">
-                <!-- notifications -->
+
             </div>
         </div>
     </section>
-
 </body>
-
 </html>
