--- a/index.html
+++ b/index.html
@@ -263,26 +263,45 @@
 
                 <!-- OVERVIEW -->
                 <div class="col-md-5 fill custom-overview-pane">
+
                     <div class="overview-pane">
                         <div class="input-group search-bar">
-                            <input type="text" class="form-control" placeholder="Search..." id="search-bar">
+                            <input type="text" class="form-control search-control" placeholder="Search..." id="search-bar">
                             <span class="input-group-btn">
                           <button class="btn btn-default" type="button" id="search-bar-button">
                             <span class="glyphicon glyphicon-search"></span>
                             </button>
                             </span>
+                            <span class="input-group-btn">
+                          <button class="btn btn-default" type="button" id="previous-search-button">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                            </button>
+                            </span>
+                            <span class="input-group-btn">
+                          <button class="btn btn-default" type="button" id="next-search-button">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                            </button>
+                            </span>
                         </div>
+
                         <div class="overview-content" oncontextmenu="return false;">
                             <div class="textarea-content right-click-menu" placeholder="Please load in a document for analysis..." readonly id="document-textarea"></div>
+
                         </div>
                     </div>
+
                 </div>
 
                 <!-- VISUALISATION -->
                 <div class="col-md-7 fill custom-visualisation-pane">
-                    <div class="visualisation-pane">
 
-                        <div class="visualisation-content"></div>
+                  <!-- <p id="visual-placeholder" class="placeholder">Visualisation</p> -->
+                    <div class="visualisation-pane" id="visualisation-selector">
+                      <!-- <p id="visual-placeholder" class="placeholder">Visualisation</p> -->
+                        <!-- <canvas id="canvas" class="wordcloud" width="1448" height="940"></canvas> -->
+                        <!-- <div id="wordcontext" class="wordcontext"></div> -->
+
+
 
                     </div>
                 </div>
