highlighted tags, normalised wordcloud, tagcloud

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li id="load-modal-button" data-toggle="modal" data-target="#load-modal"><a href="#">Load</a></li>
                     <li data-toggle="modal" data-target="#upload-modal"><a href="#">Upload</a></li>
-                    <li data-toggle="modal" data-target="#tag-modal"><a href="#">Tags</a></li>
+                    <!-- <li data-toggle="modal" data-target="#tag-modal"><a href="#">Tags</a></li> -->
                     <li data-toggle="modal" data-target="#export-modal"><a href="#">Export</a></li>
                 </ul>
             </div>
@@ -272,16 +272,7 @@
                             <span class="glyphicon glyphicon-search"></span>
                             </button>
                             </span>
-                            <span class="input-group-btn">
-                          <button class="btn btn-default" type="button" id="previous-search-button">
-                            <span class="glyphicon glyphicon-chevron-left"></span>
-                            </button>
-                            </span>
-                            <span class="input-group-btn">
-                          <button class="btn btn-default" type="button" id="next-search-button">
-                            <span class="glyphicon glyphicon-chevron-right"></span>
-                            </button>
-                            </span>
+
                         </div>
 
                         <div class="overview-content" oncontextmenu="return false;">
